# email-for-data-science

./: .gitignore  .output_metadata.json  Makefile  README.md  _quarto.yml  configuring-subject.html  configuring-subject.qmd  content-embedding.html  content-embedding.qmd  content-layout.html  content-layout.qmd  index.html  objects.json  orchestrating-auth.qmd  orchestrating-tests.html  orchestrating-tests.qmd  pyproject.toml  search.json  sitemap.xml  summary.html  summary.qmd
.github/workflows/: ci.yml
docs/: .gitignore  _quarto.yml  data_polars.py  index.qmd  objects.json  summary.quarto_ipynb
docs/reference/: emailer_lib.IntermediateEmail.write_email_message.qmd  index.qmd  mjml.accordion.qmd  mjml.accordion_element.qmd  mjml.accordion_text.qmd  mjml.accordion_title.qmd  mjml.attributes.qmd  mjml.body.qmd  mjml.breakpoint.qmd  mjml.button.qmd  mjml.carousel.qmd  mjml.carousel_image.qmd  mjml.column.qmd  mjml.divider.qmd  mjml.font.qmd  mjml.group.qmd  mjml.head.qmd  mjml.hero.qmd  mjml.html_attributes.qmd  mjml.image.qmd  mjml.include.qmd  mjml.mjml.qmd  mjml.navbar.qmd  mjml.navbar_link.qmd  mjml.preview.qmd  mjml.raw.qmd  mjml.section.qmd  mjml.social.qmd  mjml.social_element.qmd  mjml.spacer.qmd  mjml.style.qmd  mjml.table.qmd  mjml.text.qmd  mjml.title.qmd  mjml.wrapper.qmd
email-examples/: summary-example.embed-preview.html  summary-example.html  summary-example.qmd
email-preview/: index.html
emailer-lib/: .gitignore  .output_metadata.json  Makefile  README.md  __init__.py  egress.py  ingress.py  main.py  methods.py  pyproject.toml  structs.py  utils.py
emailer-lib/emailer-lib/: egress.py
emailer-lib/emailer_lib/: __init__.py  egress.py  ingress.py  structs.py  utils.py
emailer-lib/emailer_lib/tests/: test_egress.py  test_end_to_end.py  test_ingress.py  test_structs.py  test_utils.py
emailer_lib/: egress.py  ingress.py  structs.py
emailer_lib/mjml/: .gitignore  README.md  __init__.py  _core.py  image_processor.py  tags.py
emailer_lib/tests/: test_egress.py  test_ingress.py  test_structs.py
examples/: .gitignore  README.md  conditional.py  embedded.py  mjml_email.py  quarto-report.qmd  quarto_email.py  whole_game.py
nbmail/: __init__.py  egress.py  ingress.py  structs.py  utils.py
nbmail/compose/: README.md  __init__.py  blocks.py  compose.py  inline_utils.py
nbmail/mjml/: .gitignore  README.md  __init__.py  _core.py  image_processor.py  tags.py
nbmail/tests/: test_egress.py  test_end_to_end.py  test_ingress.py  test_structs.py  test_utils.py
pr-preview/pr-1/: configuring-attachments.html  configuring-subject.html  content-embedding.html  index.html  orchestrating-tests.html  search.json  summary.html
pr-preview/pr-11/: search.json  sitemap.xml  summary.html
reference/: Email.html  Email.write_email_message.html  Email.write_preview_email.html  IntermediateEmail.preview_send_email.qmd  IntermediateEmail.qmd  IntermediateEmail.write_email_message.html  IntermediateEmail.write_email_message.qmd  IntermediateEmail.write_preview_email.qmd  compose.add_cta_button.html  compose.add_readable_time.html  compose.block_image.html  compose.block_plot.html  compose.block_spacer.html  compose.block_text.html  compose.block_title.html  compose.compose_email.html  compose.create_blocks.html  compose.md.html  emailer_lib.IntermediateEmail.preview_send_email.qmd  emailer_lib.IntermediateEmail.write_email_message.html  emailer_lib.IntermediateEmail.write_preview_email.html  emailer_lib.IntermediateEmail.write_preview_email.qmd  index.html  index.qmd  mjml.accordion.html  mjml.accordion_element.html  mjml.accordion_text.html  mjml.accordion_title.html  mjml.body.html  mjml.breakpoint.html  mjml.button.html  mjml.carousel.html  mjml.carousel_image.html  mjml.column.html  mjml.divider.html  mjml.font.html  mjml.group.html  mjml.head.html  mjml.hero.html  mjml.html_attribute.html  (+48 more)
scripts/: generate-tags.py
send-quarto-emails/: main.py  methods.py
(+385 files in other folders)
