[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --cov=nbmail --cov-report=term-missing"
testpaths = ["nbmail/**/tests"]

[project]
name = "nbmail"
version = "0.0.1"
description = "Email serialization and sending utilities"
authors = [{name = "Jules Walzer-Goldfeld"}]
readme = "README.md"

requires-python = ">=3.9"

dependencies = [
    "dotenv",
    "mjml-python>=1.3.6",
    "markdown"
]

[project.optional-dependencies]
dev = [
    "aiosmtpd",
    "pytest",
    "quartodoc",
    "pytest-cov",
    "griffe",
    "syrupy",
]

mailgun = [
    "mailgun"
]

docs = [
    "redmail>=0.6.0",
    "jupyter",
    "ipykernel>=6.29.5",
    "nbformat",
    "nbclient",
    "great-tables>=0.18.0",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "css-inline>=0.17.0",
    "plotnine>=0.13.6",
    "pyarrow>=21.0.0",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:"
]
include = ["nbmail/*"]
omit = [
    "nbmail/tests/*"
]
