[project]
name = "emailer-lib"
version = "0.0.1"
description = "Email serialization and sending utilities"
authors = [{name = "Jules Walzer-Goldfeld"}]
readme = "README.md"

requires-python = ">=3.9"

dependencies = [
    "dotenv",
    "mjml-python>=1.3.6",
]

[tool.setuptools]
packages = ["emailer-lib"]
