[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --cov=emailer_lib --cov-report=term-missing"
testpaths = ["emailer_lib/tests"]

[project]
name = "emailer-lib"
version = "0.0.1"
description = "Email serialization and sending utilities"
authors = [{name = "Jules Walzer-Goldfeld"}]
readme = "README.md"

requires-python = ">=3.9"

dependencies = [
    "dotenv",
    "mjml-python>=1.3.6",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:"
]
include = ["emailer_lib/*"]
omit = [
    "emailer_lib/tests/*"
]